# advent_of_code

./: Cargo.toml
2022/: Cargo.toml  README.md  perf  run  watch
2022/src/: lib.rs
2023/: '  Cargo.toml  watch
2023/src/: lib.rs
2024/: Cargo.toml  README.md  new  perf  run
src/: args.rs  lib.rs
