[package]
name = "advent_of_code_2023"
description = "Advent of Code 2023"
authors = ["Lyr <lyr-7d1h@pm.me>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
clap = { version = "4.5", features = ["derive"] }
